Added functionality and stuff

--- a/Nets/netTests.ipynb
+++ b/Nets/netTests.ipynb
@@ -10,15 +10,24 @@
    "source": [
     "import tensorflow as tf\n",
     "import Nets.SiameseNet as sNet\n",
+    "import Nets.SiameseMetric as mNet\n",
     "from lib import loader\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from scipy import misc\n",
+    "def load_mnet(sess=None):\n",
+    "    if sess is None:\n",
+    "        sess = tf.Session()\n",
+    "    net,saver = mNet.runInit(mNet.backup8Net)\n",
+    "    mNet.runRestore(sess,saver,\"/home/jan/Desktop/Cuneiform/savedNets/SiameseMetricBackup8_30k+_120000.ckpt\")\n",
+    "    return net,sess\n",
+    "    \n",
+    "\n",
     "def load_net():\n",
     "    \n",
     "    sess = tf.Session()\n",
     "    net,saver = sNet.runInit(sNet.backup4Net)\n",
-    "    sNet.runRestore(sess,saver,\"/home/jan/Desktop/Cuneiform/savedNets/SiameseBackup4_Addition_fin.ckpt\")\n",
+    "    sNet.runRestore(sess,saver,\"/home/jan/Desktop/Cuneiform/savedNets/SiameseBackup4_2_fin.ckpt\")\n",
     "    \n",
     "    return net,sess\n",
     "\n",
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -43,26 +52,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading took 27.3329370022 seconds\n"
+      "Loading took 27.4588689804 seconds\n"
      ]
     }
    ],
    "source": [
-    "oLoad = get_loader()"
+    "oLoad = get_loader(px=48)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "net,sess = load_net()"
+    "#net,sess = load_net()\n",
+    "metNet, sess = load_mnet()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lang_num=3\n",
+    "lang = oLoad.testing_samples[lang_num]\n",
+    "chars = []\n",
+    "num_chars=5\n",
+    "start_char=2\n",
+    "num_examples=20\n",
+    "for i in lang[start_char:start_char+num_chars]:\n",
+    "    chars.extend(i[0:num_examples])\n",
+    "\n",
+    "scores = np.array(metNet.calc_dist_mat(sess,chars, batchsize=50))\n",
+    "#scores+=0.001\n",
+    "from sklearn import manifold\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "mds = manifold.MDS(n_components=2, metric=True)\n",
+    "nPos = mds.fit_transform(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib qt\n",
+    "import matplotlib.pyplot as plt\n",
+    "cols = {}\n",
+    "cols[1]=\"r\"\n",
+    "cols[2]=\"g\"\n",
+    "cols[3]=\"b\"\n",
+    "cols[4]=\"black\"\n",
+    "cols[5]=\"y\"\n",
+    "\n",
+    "plt.scatter(nPos[:,0],nPos[:,1],c=[cols[1+int(i/(num_examples))] for i in range(num_examples*num_chars)])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,6 +242,148 @@
    ],
    "source": [
     "print preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 'Fizz', 4, 'Buzz', 'Fizz', 7, 8, 'Fizz', 'Buzz', 11, 'Fizz', 13, 14, 'FizzBuzz', 16, 17, 'Fizz', 19, 'Buzz', 'Fizz', 22, 23, 'Fizz', 'Buzz', 26, 'Fizz', 28, 29, 'FizzBuzz', 31, 32, 'Fizz', 34, 'Buzz', 'Fizz', 37, 38, 'Fizz', 'Buzz', 41, 'Fizz', 43, 44, 'FizzBuzz', 46, 47, 'Fizz', 49, 'Buzz']\n"
+     ]
+    }
+   ],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hallowelt\n"
+     ]
+    }
+   ],
+   "source": [
+    ""
    ]
   },
   {
