Comments and fixes

--- a/notebooks/testing.ipynb
+++ b/notebooks/testing.ipynb
@@ -1664,46 +1664,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import lib.loader as Load\n",
+    "import lib.usefulFunctions as u_func\n",
+    "from Nets.NetCreator import NetCreator as NC\n",
+    "from Nets.Networks import SiameseNetClassic as cNet\n",
+    "from Nets.SiameseMetric import SiameseNetMetric as mNet\n",
     "\n",
-    "\n",
+    "netCreator = NC(batch_size=128,px=48,netClass=mNet)\n",
     "\n",
     "%matplotlib qt\n",
-    "path = \"/home/jan/Desktop/Cuneiform/savedNets/SiameseBackup4_2_fin2.ckpt\"\n",
+    "path = \"/home/jan/Desktop/Cuneiform/classicTestVals/SiamClassicEpoch5.ckpt\"\n",
+    "pathB = \"/home/jan/Desktop/Cuneiform/metricTestVals/SiamMetricEpoch5.ckpt\"\n",
+    "pathPos = \"/home/jan/Desktop/Cuneiform/classicTestValsAddCun/classposEpoch5.ckpt\"\n",
+    "pathBPos = \"/home/jan/Desktop/Cuneiform/metricTestValsAddCun/metricposEpoch5.ckpt\"\n",
     "#path = \"/home/jan/Desktop/Cuneiform/savedNets/SiameseBackup4_2_fin.ckpt\"\n",
     "#path = \"/home/jan/Desktop/Cuneiform/savedNets/SiameseMetricBackup2_240000.ckpt\"\n",
     "\n",
-    "load = Load.CuneiformSetLoader(48,\"/home/jan/Desktop/Cuneiform/Data/Datasets/CleanFin\")\n",
+    "load = Load.CuneiformSetLoader(48,u_func.getFolderPath()+\"TestingSet\")\n",
     "data = load.dataset[0]\n",
     "#net,saver = sNet.runInit(sNet.backup2Net)\n",
     "\n",
+    "import matplotlib\n",
+    "font = {'family': 'normal',\n",
+    "                'size': 18}\n",
     "\n",
+    "matplotlib.rc('font', **font)\n",
     "\n",
     "#pred,truth = evalFunc.test_perf(net,sess,load,0,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "import Nets.SiameseNet as sNet\n",
-    "#import Nets.SiameseMetric as sNet\n",
+    "\n",
     "\n",
     "import time\n",
     "import Evaluation.Evals as evalFunc\n",
     "import matplotlib.pyplot as plt\n",
-    "net,saver = sNet.runInit(sNet.backup4Net)\n",
-    "print \"starting calculations\"\n",
     "\n",
-    "sess= tf.Session() \n",
-    "sNet.runRestore(sess, saver, path)"
+    "sess=tf.Session()\n",
+    "\n",
+    "\n",
+    "netCreator.loadNet(sess,pathBPos)"
    ]
   },
   {
@@ -1724,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,27 +1747,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dMat,classes = distMat(data,range(12),net,sess)"
+    "dMat,classes = distMat(data,range(8),netCreator.net,sess)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "886"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(dMat)"
+    "import numpy as np\n",
+    "dMat=np.array(dMat)"
    ]
   },
   {
@@ -1778,8 +1778,217 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(nPos[:,0],nPos[:,1],c=classes)\n",
+    "plt.scatter(nPos[:,0],nPos[:,1],c=classes,s=20)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Evaluation import Evals as evals\n",
+    "reload(evals)\n",
+    "cScipy = evals.Clustering_Scipy(dMat,method=\"complete\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels = cScipy.get_clusters(0.1)\n",
+    "max(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = zip(classes,labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "numbers = []\n",
+    "for i in range(max(labels)+1):\n",
+    "    temps = [j[0]  for j in n if j[1]==i]\n",
+    "    numbers.append(Counter(temps))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "plotVals = {}\n",
+    "plotCount = {}\n",
+    "for c in numbers:\n",
+    "    val = c.most_common(1)\n",
+    "    \n",
+    "    s = sum(c.values())\n",
+    "    #s2= sum(np.array(classes)==val[0][0])\n",
+    "    \n",
+    "    if s in plotVals:\n",
+    "        plotCount[s]=plotCount[s]+1\n",
+    "        plotVals[s] = plotVals[s]+float(val[0][1])/s\n",
+    "    else:\n",
+    "        plotCount[s]=1\n",
+    "        plotVals[s] =float(val[0][1])/s\n",
+    "    #print float(val[0][1])/s\n",
+    "xys = []\n",
+    "for val in plotVals.keys():\n",
+    "    xys.append([val,float(plotVals[val])/plotCount[val]])\n",
+    "xys.sort(key=lambda x:x[0])\n",
+    "xys=np.array(xys)\n",
+    "print xys.shape\n",
+    "x=xys[:,0]\n",
+    "y=xys[:,1]\n",
+    "plt.plot(x,y,\"-\",x,y,\"or\")\n",
+    "plt.xlabel(\"Cluster size\")\n",
+    "plt.ylabel(\"Average purity\")\n",
+    "plt.title(\"Average clustering, classical network\")\n",
+    "plt.ylim((0,1.1))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.1412639405204461, 0.19457013574660634, 0.23529411764705882, 0.4166666666666667, 0.37209302325581395, 0.48717948717948717, 0.3333333333333333, 0.17391304347826086, 0.4, 0.4, 0.25, 1.0, 1.0, 0.4444444444444444, 0.4444444444444444, 0.6666666666666666, 0.4444444444444444, 0.375, 0.375, 0.6, 0.4, 0.4, 0.6, 0.4, 0.5, 0.5, 0.5, 1.0, 0.3333333333333333, 0.6666666666666666, 0.6666666666666666, 0.5, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.5, 1.0, 1.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "numbers2 = [0 for i in range(max(classes)+1)]\n",
+    "sizes = numbers2[:]\n",
+    "numbers = []\n",
+    "for i in range(max(labels)+1):\n",
+    "    temps = [j[0]  for j in n if j[1]==i]\n",
+    "    numbers.append(Counter(temps))\n",
+    "classCount=Counter(classes)\n",
+    "for c in numbers:\n",
+    "    #print c\n",
+    "    for i in c:\n",
+    "        if c[i]>classCount[i]*numbers2[i]:\n",
+    "            numbers2[i]=float(c[i])/classCount[i]\n",
+    "            sizes[i]=classCount[i]\n",
+    "    \n",
+    "print numbers2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Counter({0: 1}), Counter({0: 1}), Counter({2: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({5: 1}), Counter({5: 1}), Counter({5: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({7: 1}), Counter({7: 1}), Counter({7: 1}), Counter({0: 60}), Counter({3: 2}), Counter({2: 37, 5: 22}), Counter({4: 13}), Counter({7: 19}), Counter({3: 26}), Counter({1: 48}), Counter({6: 15}), Counter({4: 2})]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(sizes,numbers2)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(269, 0.1412639405204461), (221, 0.19457013574660634), (153, 0.23529411764705882), (48, 0.4166666666666667), (43, 0.37209302325581395), (39, 0.48717948717948717), (33, 0.3333333333333333), (23, 0.17391304347826086), (20, 0.4), (15, 0.4), (12, 0.25), (10, 1.0), (10, 1.0), (9, 0.4444444444444444), (9, 0.4444444444444444), (9, 0.6666666666666666), (9, 0.4444444444444444), (8, 0.375), (8, 0.375), (5, 0.6), (5, 0.4), (5, 0.4), (5, 0.6), (5, 0.4), (4, 0.5), (4, 0.5), (4, 0.5), (3, 1.0), (3, 0.3333333333333333), (3, 0.6666666666666666), (3, 0.6666666666666666), (2, 0.5), (2, 1.0), (2, 1.0), (2, 1.0), (2, 1.0), (2, 1.0), (2, 1.0), (2, 0.5), (2, 1.0), (2, 1.0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print zip(sizes,numbers2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Counter({0: 1}), Counter({0: 1}), Counter({0: 1}), Counter({0: 1}), Counter({1: 1}), Counter({2: 1}), Counter({2: 1}), Counter({2: 1}), Counter({2: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({3: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({4: 1}), Counter({5: 1}), Counter({5: 1}), Counter({5: 1}), Counter({5: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({6: 1}), Counter({7: 1}), Counter({7: 1}), Counter({7: 1}), Counter({7: 1}), Counter({7: 1}), Counter({3: 2}), Counter({3: 2}), Counter({4: 2}), Counter({1: 45}), Counter({4: 2}), Counter({2: 34, 5: 21}), Counter({6: 8}), Counter({0: 58}), Counter({7: 15}), Counter({3: 13}), Counter({1: 2}), Counter({7: 2})]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Nets.NetCreator import NetCreator as NetCr\n",
+    "from Nets.Networks import SiameseNetClassic as SiamClass\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "netCreator = NetCr(batch_size=128,px=48,netClass=SiamClass)\n",
+    "sess=tf.Session()\n",
+    "#If a saved net is available\n",
+    "#netCreator.loadNet(sess,pathToSavedNet)\n",
+    "netCreator.initialize(sess)"
    ]
   },
   {
